WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
236256
Unreviewed, non-unified build fixes after
246907@main
https://bugs.webkit.org/show_bug.cgi?id=236256
Summary
Unreviewed, non-unified build fixes after 246907@main
Lauro Moura
Reported
2022-02-07 13:40:45 PST
Unreviewed, non-unified build fixes after
246907@main
Attachments
Patch
(1.62 KB, patch)
2022-02-07 13:41 PST
,
Lauro Moura
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Fixed forward decl
(1.62 KB, patch)
2022-02-07 14:07 PST
,
Lauro Moura
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Lauro Moura
Comment 1
2022-02-07 13:41:36 PST
Created
attachment 451145
[details]
Patch
Lauro Moura
Comment 2
2022-02-07 14:07:49 PST
Created
attachment 451151
[details]
Fixed forward decl
EWS
Comment 3
2022-02-07 17:14:59 PST
Committed
r289252
(
246936@main
): <
https://commits.webkit.org/246936@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 451151
[details]
.
Radar WebKit Bug Importer
Comment 4
2022-02-07 17:15:18 PST
<
rdar://problem/88602807
>
Darin Adler
Comment 5
2022-02-07 18:03:54 PST
Comment on
attachment 451151
[details]
Fixed forward decl View in context:
https://bugs.webkit.org/attachment.cgi?id=451151&action=review
> Source/WebCore/style/ContainerQueryEvaluator.h:27 > +#include <wtf/Ref.h>
Can this be <wtf/Forward.h> instead of <wtf/Ref.h>?
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug