Unreviewed, non-unified build fixes after 246907@main https://bugs.webkit.org/show_bug.cgi?id=236256

* style/ContainerQueryEvaluator.cpp:
* style/ContainerQueryEvaluator.h:



Canonical link: https://commits.webkit.org/246936@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@289252 268f45cc-cd09-0410-ab3c-d52691b4dbfc